--- a/about.html
+++ b/about.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome</title>
-  </head>
-  <body>
-    Welcome to my website 2
-  </body>
+
+<head>
+  <title>Welcome</title>
+</head>
+
+<body>
+  <h1>About</h1>
+  <a href="/">Home</a>
+</body>
+
 </html>
