--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome</title>
-  </head>
-  <body>
-    Welcome to my website 
-  </body>
+
+<head>
+  <title>Welcome</title>
+</head>
+
+<body>
+  <h1>Welcome to my website</h1>
+  <a href="about.html">About</a>
+</body>
+
 </html>
